Integration of Contact list into group saving plan

--- a/Savio/SavingPlanSetup/GroupsavingViewController.xib
+++ b/Savio/SavingPlanSetup/GroupsavingViewController.xib
@@ -16,7 +16,7 @@
                 <outlet property="savingPlanTitleLabel" destination="eqD-re-6hS" id="zyA-9h-ePX"/>
                 <outlet property="scrlView" destination="bZg-DJ-1R2" id="WAr-qu-Gvf"/>
                 <outlet property="tblView" destination="umo-dj-Tjc" id="adQ-td-as7"/>
-                <outlet property="tblViewHt" destination="5lA-6m-81K" id="lng-wQ-5ht"/>
+                <outlet property="tblViewHt" destination="PSm-Dy-U60" id="L9C-Zx-Y4m"/>
                 <outlet property="topBackgroundImageView" destination="zze-wu-hMR" id="5Te-Y6-j1S"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -29,85 +29,105 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZg-DJ-1R2">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ub-W7-mUI">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="192"/>
-                            <color key="backgroundColor" red="0.63921570780000003" green="0.63529413940000001" blue="0.63921570780000003" alpha="1" colorSpace="deviceRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="192" id="m0K-Ty-hUv"/>
-                            </constraints>
-                        </view>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="groupsave-setup-bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="zze-wu-hMR">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="192"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="192" id="SYE-wD-3l9"/>
-                            </constraints>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqD-re-6hS">
-                            <rect key="frame" x="267" y="130" width="65" height="10"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="10" id="CBt-EK-YgJ"/>
-                                <constraint firstAttribute="width" constant="65" id="u5e-kh-sqc"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="10"/>
-                            <color key="textColor" red="0.21176470589999999" green="0.21960784310000001" blue="0.2666666667" alpha="1" colorSpace="deviceRGB"/>
-                            <nil key="highlightedColor"/>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                    <integer key="value" value="1"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JzU-xa-etS">
-                            <rect key="frame" x="274" y="71" width="51" height="50"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="50" id="0pe-5i-qs0"/>
-                                <constraint firstAttribute="width" constant="51" id="NbK-CY-rWW"/>
-                            </constraints>
-                            <state key="normal" image="generic-camera.png"/>
-                            <connections>
-                                <action selector="cameraButtonPressed:" destination="-1" eventType="touchUpInside" id="zdt-ET-0ym"/>
-                            </connections>
-                        </button>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="umo-dj-Tjc">
-                            <rect key="frame" x="35" y="246" width="530" height="500"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="utt-4l-toQ">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <subviews>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="umo-dj-Tjc">
+                                    <rect key="frame" x="35" y="200" width="530" height="500"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="500" id="PSm-Dy-U60"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="dataSource" destination="-1" id="e8W-ss-OOG"/>
+                                        <outlet property="delegate" destination="-1" id="VMG-eU-Whx"/>
+                                    </connections>
+                                </tableView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ub-W7-mUI">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="192"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="groupsave-setup-bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="zze-wu-hMR">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="192"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqD-re-6hS">
+                                            <rect key="frame" x="267" y="125" width="65" height="10"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="10" id="L3f-AU-uV6"/>
+                                                <constraint firstAttribute="width" constant="65" id="eQf-W2-AuS"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="10"/>
+                                            <color key="textColor" red="0.21176470589999999" green="0.21960784310000001" blue="0.2666666667" alpha="1" colorSpace="deviceRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                    <integer key="value" value="1"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JzU-xa-etS">
+                                            <rect key="frame" x="274" y="71" width="51" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="51" id="3Vo-vW-Ayj"/>
+                                                <constraint firstAttribute="height" constant="50" id="zpb-tU-pBO"/>
+                                            </constraints>
+                                            <state key="normal" image="generic-camera.png"/>
+                                            <connections>
+                                                <action selector="cameraButtonPressed:" destination="-1" eventType="touchUpInside" id="zdt-ET-0ym"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.63921570780000003" green="0.63529413940000001" blue="0.63921570780000003" alpha="1" colorSpace="deviceRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="zze-wu-hMR" firstAttribute="top" secondItem="6Ub-W7-mUI" secondAttribute="top" id="6aA-5J-zLx"/>
+                                        <constraint firstAttribute="height" constant="192" id="6pt-Sx-dRn"/>
+                                        <constraint firstItem="eqD-re-6hS" firstAttribute="top" secondItem="JzU-xa-etS" secondAttribute="bottom" constant="4" id="8z4-Ca-jbG"/>
+                                        <constraint firstAttribute="bottom" secondItem="eqD-re-6hS" secondAttribute="bottom" constant="57" id="9wB-lT-60i"/>
+                                        <constraint firstItem="eqD-re-6hS" firstAttribute="top" secondItem="JzU-xa-etS" secondAttribute="bottom" constant="4" id="A0i-19-eKY"/>
+                                        <constraint firstItem="zze-wu-hMR" firstAttribute="centerX" secondItem="6Ub-W7-mUI" secondAttribute="centerX" id="CpY-nB-mwZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="zze-wu-hMR" secondAttribute="trailing" id="F9b-IP-6Yh"/>
+                                        <constraint firstItem="JzU-xa-etS" firstAttribute="top" secondItem="6Ub-W7-mUI" secondAttribute="top" constant="71" id="GFH-uf-4yt"/>
+                                        <constraint firstAttribute="bottom" secondItem="zze-wu-hMR" secondAttribute="bottom" id="LVh-2g-tF2"/>
+                                        <constraint firstItem="zze-wu-hMR" firstAttribute="leading" secondItem="6Ub-W7-mUI" secondAttribute="leading" id="TKd-FG-F39"/>
+                                        <constraint firstItem="eqD-re-6hS" firstAttribute="centerX" secondItem="6Ub-W7-mUI" secondAttribute="centerX" id="hTz-hr-np9"/>
+                                        <constraint firstItem="JzU-xa-etS" firstAttribute="centerX" secondItem="6Ub-W7-mUI" secondAttribute="centerX" id="wf8-7m-VbZ"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="8z4-Ca-jbG"/>
+                                        </mask>
+                                    </variation>
+                                </view>
+                            </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="500" id="5lA-6m-81K"/>
+                                <constraint firstItem="6Ub-W7-mUI" firstAttribute="top" secondItem="utt-4l-toQ" secondAttribute="top" id="3mb-GC-qMS"/>
+                                <constraint firstItem="umo-dj-Tjc" firstAttribute="top" secondItem="6Ub-W7-mUI" secondAttribute="bottom" constant="8" id="3sY-ph-Ofy"/>
+                                <constraint firstAttribute="height" constant="600" id="DOw-VY-uDv"/>
+                                <constraint firstItem="6Ub-W7-mUI" firstAttribute="leading" secondItem="utt-4l-toQ" secondAttribute="leading" id="Pek-O7-44c"/>
+                                <constraint firstAttribute="trailing" secondItem="umo-dj-Tjc" secondAttribute="trailing" constant="35" id="Wnw-xG-m43"/>
+                                <constraint firstItem="umo-dj-Tjc" firstAttribute="leading" secondItem="utt-4l-toQ" secondAttribute="leading" constant="35" id="a20-YL-DzY"/>
+                                <constraint firstAttribute="trailing" secondItem="6Ub-W7-mUI" secondAttribute="trailing" id="dQF-dW-msC"/>
+                                <constraint firstItem="6Ub-W7-mUI" firstAttribute="centerX" secondItem="utt-4l-toQ" secondAttribute="centerX" id="hrr-3r-2J3"/>
                             </constraints>
-                            <connections>
-                                <outlet property="dataSource" destination="-1" id="e8W-ss-OOG"/>
-                                <outlet property="delegate" destination="-1" id="VMG-eU-Whx"/>
-                            </connections>
-                        </tableView>
+                        </view>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="eqD-re-6hS" firstAttribute="top" secondItem="JzU-xa-etS" secondAttribute="bottom" constant="9" id="16x-Nd-wkU"/>
-                        <constraint firstAttribute="trailing" secondItem="6Ub-W7-mUI" secondAttribute="trailing" id="1AY-6z-Tzg"/>
-                        <constraint firstItem="zze-wu-hMR" firstAttribute="top" secondItem="bZg-DJ-1R2" secondAttribute="top" id="1vh-Yk-2oG"/>
-                        <constraint firstItem="zze-wu-hMR" firstAttribute="centerX" secondItem="eqD-re-6hS" secondAttribute="centerX" id="7Vj-Zn-Jie"/>
-                        <constraint firstItem="6Ub-W7-mUI" firstAttribute="leading" secondItem="bZg-DJ-1R2" secondAttribute="leading" id="9QJ-q8-l98"/>
-                        <constraint firstAttribute="bottom" secondItem="umo-dj-Tjc" secondAttribute="bottom" constant="-46" id="F0a-bw-8of"/>
-                        <constraint firstItem="JzU-xa-etS" firstAttribute="top" secondItem="bZg-DJ-1R2" secondAttribute="top" constant="71" id="Ncg-H8-jov"/>
-                        <constraint firstAttribute="trailing" secondItem="umo-dj-Tjc" secondAttribute="trailing" constant="35" id="Rf7-q4-o7w"/>
-                        <constraint firstItem="umo-dj-Tjc" firstAttribute="top" secondItem="zze-wu-hMR" secondAttribute="bottom" constant="54" id="TiL-Fv-wbL"/>
-                        <constraint firstItem="zze-wu-hMR" firstAttribute="leading" secondItem="bZg-DJ-1R2" secondAttribute="leading" id="aLm-Ob-F3T"/>
-                        <constraint firstItem="6Ub-W7-mUI" firstAttribute="top" secondItem="bZg-DJ-1R2" secondAttribute="top" id="dn3-50-ydn"/>
-                        <constraint firstItem="eqD-re-6hS" firstAttribute="centerX" secondItem="bZg-DJ-1R2" secondAttribute="centerX" id="f8B-uj-eHA"/>
-                        <constraint firstItem="JzU-xa-etS" firstAttribute="centerX" secondItem="bZg-DJ-1R2" secondAttribute="centerX" id="szI-gh-fc7"/>
-                        <constraint firstAttribute="trailing" secondItem="zze-wu-hMR" secondAttribute="trailing" id="tUi-Yo-gHf"/>
-                        <constraint firstItem="umo-dj-Tjc" firstAttribute="leading" secondItem="bZg-DJ-1R2" secondAttribute="leading" constant="35" id="xnT-Qq-cRf"/>
-                        <constraint firstItem="eqD-re-6hS" firstAttribute="top" secondItem="JzU-xa-etS" secondAttribute="bottom" constant="9" id="yqd-W1-fYP"/>
+                        <constraint firstAttribute="bottom" secondItem="utt-4l-toQ" secondAttribute="bottom" id="DQq-gQ-3wW"/>
+                        <constraint firstItem="utt-4l-toQ" firstAttribute="centerX" secondItem="bZg-DJ-1R2" secondAttribute="centerX" id="Vmj-tQ-0mj"/>
+                        <constraint firstAttribute="trailing" secondItem="utt-4l-toQ" secondAttribute="trailing" id="fWp-mn-3Xl"/>
+                        <constraint firstItem="utt-4l-toQ" firstAttribute="leading" secondItem="bZg-DJ-1R2" secondAttribute="leading" id="qjA-2U-deR"/>
+                        <constraint firstItem="utt-4l-toQ" firstAttribute="top" secondItem="bZg-DJ-1R2" secondAttribute="top" id="yME-El-MQj"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="bZg-DJ-1R2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="2MQ-ci-GeU"/>
-                <constraint firstItem="bZg-DJ-1R2" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="5Sd-D2-VnL"/>
-                <constraint firstItem="bZg-DJ-1R2" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="IvF-Li-Rp7"/>
-                <constraint firstAttribute="bottom" secondItem="bZg-DJ-1R2" secondAttribute="bottom" id="Xa5-gd-NP6"/>
-                <constraint firstAttribute="trailing" secondItem="bZg-DJ-1R2" secondAttribute="trailing" id="YVR-iq-MB2"/>
-                <constraint firstItem="bZg-DJ-1R2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="dY9-7G-M1z"/>
+                <constraint firstAttribute="trailing" secondItem="bZg-DJ-1R2" secondAttribute="trailing" id="4Zc-X8-En1"/>
+                <constraint firstItem="bZg-DJ-1R2" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Sga-eZ-sTR"/>
+                <constraint firstItem="bZg-DJ-1R2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="aYi-SY-GLP"/>
+                <constraint firstItem="bZg-DJ-1R2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bFZ-GL-omv"/>
+                <constraint firstItem="bZg-DJ-1R2" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="e7C-Nt-B1Z"/>
+                <constraint firstAttribute="bottom" secondItem="bZg-DJ-1R2" secondAttribute="bottom" id="n9d-ff-qf3"/>
             </constraints>
             <point key="canvasLocation" x="576" y="343"/>
         </view>
